--- a/src/MainApps/QtAddressBar/MainWindow.ui
+++ b/src/MainApps/QtAddressBar/MainWindow.ui
@@ -33,8 +33,16 @@
        </font>
       </property>
       <property name="styleSheet">
-       <string notr="true">border:none;
+       <string notr="true">QLineEdit{
+border: 1px solid rgb(217, 217, 217);
+color:#333333;
+}
+
+
 </string>
+      </property>
+      <property name="text">
+       <string/>
       </property>
      </widget>
     </item>
