--- a/src/MainApps/QtAddressBar/MainWindow.ui
+++ b/src/MainApps/QtAddressBar/MainWindow.ui
@@ -14,7 +14,61 @@
    <string>MainWindow</string>
   </property>
   <property name="styleSheet">
-   <string notr="true">background-color: rgb(255, 255, 255);</string>
+   <string notr="true">QMainWindow{
+background-color: rgb(255, 255, 255);
+}
+
+QScrollBar:vertical {
+	   border:none;
+       background: transparent;
+       width: 10px;
+}
+
+QScrollBar::handle:vertical {
+	   border-radius:3px;
+       background: #DDDDDD;
+       min-height: 60px;
+}
+QScrollBar::add-line:vertical {
+       border: none;
+       height: 0px;
+}
+
+QScrollBar::sub-line:vertical {
+       border: none;
+       height: 0px;
+}
+
+QScrollBar::add-page:vertical, QScrollBar::sub-page:vertical {
+       background:  transparent;
+}
+   
+   
+   
+QScrollBar:horizontal {
+	   border:none;
+       background: transparent;
+       height:10px;
+
+}
+QScrollBar::handle:horizontal {
+		border-radius:3px;
+       background: #DDDDDD;
+       min-width: 60px;
+}
+QScrollBar::add-line:horizontal {
+       border: none;
+       width: 0px;
+}
+
+QScrollBar::sub-line:horizontal {
+       border: none;
+       width: 0px;
+}
+
+QScrollBar::add-page:horizontal, QScrollBar::sub-page:horizontal {
+       background:  transparent;
+}</string>
   </property>
   <widget class="QWidget" name="centralWidget">
    <layout class="QVBoxLayout" name="verticalLayout">
