--- a/src/MainApps/QtAddressBar/MainWindow.ui
+++ b/src/MainApps/QtAddressBar/MainWindow.ui
@@ -92,7 +92,7 @@ border: 1px solid rgb(217, 217, 217);
 color:#333333;
 }
 
-QLineEdit::focus{
+QLineEdit:focus{
 border: 1px solid rgb(0, 120, 215);
 }
 
@@ -102,9 +102,6 @@ border: 1px solid rgb(0, 120, 215);
        <string/>
       </property>
      </widget>
-    </item>
-    <item>
-     <widget class="QLineEdit" name="lineEdit"/>
     </item>
     <item>
      <widget class="QPushButton" name="pushButton">
